# beam-bvm-util

./: Cargo.toml  README.md
src/: bvm_safe.rs  bvm_util.rs  lib.rs
src/app/: mod.rs
src/app/safe/: comm.rs  doc.rs  log.rs  mod.rs  nonce.rs  transaction.rs  util.rs
src/app/simple/: doc.rs  mod.rs  public_key.rs  transaction.rs  var.rs
src/app/util/: contracts_walker.rs  document_macros.rs  document_writer.rs  enum_and_dump_contracts.rs  funds_walker.rs  key_sid_cid.rs  log_reader.rs  mod.rs  var_reader.rs
src/common/: mod.rs
src/common/alloc/: bvm_allocator.rs  bvm_global_alloc.rs  mod.rs
src/common/extensions/: as_bvm_ptr.rs  empty_cstr.rs  mod.rs  to_c_str.rs  to_c_string.rs
src/common/safe/: halt.rs  hash.rs  mem.rs  mod.rs  string.rs  write.rs
src/common/simple/: mod.rs  string.rs  write.rs
src/common/traits/: contract_params.rs  mod.rs  to_sized_ptr.rs
src/common/types/: mod.rs  sized_ptr.rs  sized_result.rs
src/common/util/: c_str.rs  mod.rs
src/contract/safe/: assets.rs  external.rs  util.rs  var.rs
src/contract/simple/: asset.rs  external.rs  mod.rs  util.rs  var.rs
src/safe/: mod.rs
src/safe/app/: comm.rs  doc.rs  log.rs  mod.rs  nonce.rs  nonce_keys.rs  public_key.rs  transaction.rs  util.rs  var.rs
src/safe/common/: get.rs  hash.rs  mem.rs  mod.rs  secp.rs  str.rs  util.rs
src/safe/contract/: assets.rs  external.rs  mod.rs  util.rs  var.rs
src/simple/app/: doc.rs  mod.rs  public_key.rs
src/simple/common/: mod.rs  str.rs  util.rs
src/types/: exists_result.rs  mod.rs  sized_result.rs
src/util/: mod.rs
(+12 files in other folders)
