[package]
name = "beam_bvm_util"
#First two version numbers will match BVM, last will be for this project 
version = "7.1.12"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/NewDark90/beam-bvm-util"
readme = "README.md"
description = """
A light wrapper around beam_bvm_interface with some extra utilities that would be useful for interacting with the bvm.
"""

[lib]
crate-type = ["rlib"]

[dependencies]
beam_bvm_interface = "7.1.13107"